--- a/public/index.html
+++ b/public/index.html
@@ -44,9 +44,9 @@
 		<div id="game-wrapper" class="hide">
 			<div id="game">
 				<h2 id="game-title">Virus Destroyer</h2>
-				<div id="message-wrapper">
+				<div id="game-div">
 					<!-- here is chat -->
-					<ul id="messages">
+					<ul id="gameUl">
 					</ul><!-- /#messages -->
 				</div><!-- /#messages-wrapper -->
 
@@ -56,13 +56,15 @@
 					 <div class="box"></div>
 					 
 				</div>
-
-				<form id="message-form">
+				<form id="form-div">
+					<!-- 
 					<div class="input-group">
 						<input type="text" id="message" class="form-control" placeholder="Type something nice...">
 						<button type="submit" class="btn btn-success">Send</button>
 					</div>
+					-->
 				</form>
+			
 			</div>
 
 
